src/test/ui/borrowck/borrowck-lend-flow-if.stderr
error[E0502]: cannot borrow `*v` as mutable because `v` is also borrowed as immutable
  --> $DIR/borrowck-lend-flow-if.rs:29:21
   |
LL |         _w = &v;
   |               - immutable borrow occurs here
LL |     }
LL |     borrow_mut(&mut *v); //~ ERROR cannot borrow
   |                     ^^ mutable borrow occurs here
LL |     _w.use_ref();
LL | }
   | - immutable borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
